--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "aps-hubs-browser-nodejs",
+  "name": "aps-hubs-xls",
   "version": "1.0.0",
-  "description": "Autodesk Platform Services application built by following the Hubs Browser tutorial from https://aps.autodesk.com/tutorials.",
+  "description": "Extract metadata of model on your Autodesk360, BIM360 or Autodesk Construction Cloud(ACC) account, into an excel spreadsheet.",
   "scripts": {
     "start": "node server.js"
   },
